解决中文乱码和静态资源加载不了的问题

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+#实现WebMvcConfigurationSupport后，静态资源相关的内容就会实现
+spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+
 #主数据源 localhost:3306/property-erp
 first.spring.datasource.url = jdbc:mysql://127.0.0.1:3306/erp-framework?useUnicode=true&characterEncoding=utf8
 first.spring.datasource.username = root
