调整主界面的部分展示功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.http.encoding.enabled=true
 #主数据源 localhost:3306/property-erp
 first.spring.datasource.url = jdbc:mysql://127.0.0.1:3306/erp-framework?useUnicode=true&characterEncoding=utf8
 first.spring.datasource.username = root
-first.spring.datasource.password = mysql
+first.spring.datasource.password = mysql2017
 first.spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 first.spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
