--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,13 @@
             <classifier>jdk15</classifier>
         </dependency>
 
+        <!-- shiro -->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
