--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,14 @@ first.spring.datasource.filters=stat,wall,log4j2
 first.spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 # 合并多个DruidDataSource的监控数据
 #spring.datasource.useGlobalDataSourceStat=true
+
+#Redis配置
+spring.redis.database=0
+spring.redis.host=127.0.0.1
+spring.redis.password=
+spring.redis.port=6379
+spring.redis.timeout=0
+spring.redis.jedis.pool.max-active=1000
+spring.redis.jedis.pool.max-wait=-1
+spring.redis.jedis.pool.max-idle=10
+spring.redis.jedis.pool.min-idle=5
