--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,3 +52,6 @@ spring.redis.jedis.pool.max-active=1000
 spring.redis.jedis.pool.max-wait=-1
 spring.redis.jedis.pool.max-idle=10
 spring.redis.jedis.pool.min-idle=5
+
+#sql»’÷æ¥Ú”°
+logging.level.com.chenyanwu.erp.erpframework.dao=debug        
