文件上传，目前文件上传进度还有问题

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,7 +45,7 @@ first.spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat
 #Redis配置
 spring.redis.database=0
 spring.redis.host=127.0.0.1
-spring.redis.password=
+spring.redis.password=hfsj_0510
 spring.redis.port=6379
 spring.redis.timeout=0
 spring.redis.jedis.pool.max-active=1000
@@ -54,4 +54,9 @@ spring.redis.jedis.pool.max-idle=10
 spring.redis.jedis.pool.min-idle=5
 
 #sql日志打印
-logging.level.com.chenyanwu.erp.erpframework.dao=debug        
+logging.level.com.chenyanwu.erp.erpframework.dao=debug
+
+#文件存储路径
+file.temppath=E:/files/filetemp
+file.repath=E:/files/refile
+file.path=E:/files/file
