基于FastDFS分布式文件系统实现文件上传（其中FastDFS需自己搭建）

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#jasypt加密的盐值
+jasypt.encryptor.password=erp
+
 #实现WebMvcConfigurationSupport后，静态资源相关的内容就会实现
 spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
